Updated all of the sections, corrected spacing and adjusted buttons. Preparing for navigation and responsiveness.

--- a/style.css
+++ b/style.css
@@ -32,12 +32,23 @@
 
   --size-100: 0.25rem;
   --size-200: 0.5rem;
-  --size-300: 1rem;
-  --size-400: 1.5rem;
-  --size-500: 2rem;
-  --size-600: 3rem;
-  --size-700: 4rem;
-  --size-800: 5rem;
+  --size-300: 0.75rem;
+  --size-400: 1rem;
+  --size-500: 1.5rem;
+  --size-600: 2rem;
+  --size-700: 3rem;
+  --size-800: 4rem;
+  --size-900: 5rem;
+}
+
+@media (min-width: 50em) {
+  :root {
+    --fs-body: var(--fs-400);
+    --fs-primary-heading: var(--fs-800);
+    --fs-secondary-heading: var(--fs-700);
+
+    --fs-nav: var(--fs-200);
+  }
 }
 
 /* Box sizing rules */
@@ -178,7 +189,11 @@ svg {
   font-size: var(--fs-500);
 }
 
-.padding-blo .container {
+.padding-block-700 {
+  padding-block: var(--size-700);
+}
+
+.container {
   --max-width: 1110px;
   --padding: 1rem;
 
@@ -216,12 +231,24 @@ body {
   padding: 1em 2.5em;
   font-weight: var(--fw-bold);
   font-size: var(--fs-button);
+  line-height: 0;
   color: var(--clr-neutral-4);
   background-color: var(--clr-primary-2);
   box-shadow: 0 1.125em 1em -1em var(--clr-primary-2_1);
 }
 
+.button[data-type="inverted"] {
+  background-color: var(--clr-neutral-4);
+  color: var(--clr-primary-2);
+}
+
 .button:hover,
 .button:focus-visible {
   background-color: var(--clr-primary-2_1);
+}
+
+.button[data-type="inverted"]:hover,
+.button[data-type="inverted"]:focus-visible {
+  background-color: var(--clr-neutral-4);
+  color: var(--clr-primary-2_1);
 }
